ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.20
    • Affects Version/s: 6.0.0
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-07-08, Execution Team 2024-07-22, Execution Team 2024-08-19, Execution Team 2024-09-02, Execution Team 2024-09-16, Execution Team 2024-09-30, Execution Team 2024-10-14, Execution Team 2024-10-28, Execution Team 2024-11-11, Execution Team 2024-11-25
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The createIndex command wasn't checking if featureFlagCollModIndexUnique was enabled when indexOptions included prepareUnique. We previously relied on an inner layer feature flag check, but SERVER-87373 had to remove that check as it was causing invariant failures and crashing the server. We should have createIndex command to check for featureFlagCollModIndexUnique at the entry point, similar to how collMod does.

            Assignee:
            Wei Hu
            Reporter:
            Suganthi Mani
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: