SERVER-91738 Check if index spec contains prepareUnique when featureF… (#25986)

GitOrigin-RevId: b2352799a56a3475fc4778e72e89085fb4f09875